# ndt_slam_ros

./: README.md
dynamic_slam_utils/: CMakeLists.txt  package.xml
dynamic_slam_utils/include/dynamic_slam_utils/: eigen_tools.h  point_cloud_tools.h
dynamic_slam_utils/src/: eigen_tools.cpp
dynamic_slam_utils/test/: eigen_tools_test.cpp
graph_slam_uk/: CMakeLists.txt  package.xml
graph_slam_uk/cmake-modules/: FindG2O.cmake
graph_slam_uk/include/graph_slam_uk/: data_holder.h  gauss_newton_optimalizer2d.h  graph_slam2d_node.h  graph_slam_interfaces.h  loop_detector.h  ndt_grid2d_holder.h  ndt_slam_algorithm.h  olson_loop_detector.h  optimizer.h  pcl_holder.h  pcl_ndt_scanmatcher.h  pose_graph.h  rrr_clusterizer.h  rrr_loop_proofer.h  slam2d.h  slam2d_policy.h  slam_algorithm_interface.h
graph_slam_uk/include/graph_slam_uk/ndt/: cell_policy2d.h  ndt_cell.h  ndt_grid2d.h  ndt_grid2d_interface.h  ndt_mapper.h  output_msgs.h  voxel_grid2d.h
graph_slam_uk/include/graph_slam_uk/registration/: correlative_estimation2d.h  correlative_estimation_tools.h  d2d_ndt2d.h  d2d_ndt2d_robust.h  ndt2d.h  ndt_reg_tools.h  scanmatchable_grid_interface.h
graph_slam_uk/include/graph_slam_uk/slam_optimizer/: dataset_parser.h  graph_slam_interfaces.h  loop_detector.h  ndt_scanmatcher.h  pose_graph.h  rrr_g2o_wrapper.h  rrr_loop_proofer.h  slam2d.h  slam2d_policy.h
graph_slam_uk/include/graph_slam_uk/slam_optimizer/max_mixture/: edge_se3_mixture.h
graph_slam_uk/include/graph_slam_uk/slam_optimizer/switchable_constraints/: edge_se2MaxMixture.h  edge_se3Switchable.h  edge_switchPrior.h  vertex_switchLinear.h
graph_slam_uk/include/graph_slam_uk/utils/: covariance_inverse.h  covariance_wrapper.h  eigen_tools.h  msgs_conversions.h  point_cloud_tools.h  string_tools.h
graph_slam_uk/launch/: gmapping_clf_bags.launch  graph_slam_bag_MIT.launch  intel_bag.launch
graph_slam_uk/src/: graph_slam2d_node.cpp  parser2d.cpp  pcl_ndt_scanmatcher.cpp  rrr_g20_wrapper.cpp
graph_slam_uk/src/ndt/: ndt_cell.cpp  ndt_grid2d_merging.cpp
graph_slam_uk/src/registration/: ndt2d_visual.cpp
graph_slam_uk/src/slam_optimizer/: parser2d.cpp  rrr_clusterizer.cpp  rrr_g20_wrapper.cpp
graph_slam_uk/src/slam_optimizer/max_mixture/: edge_se2_mixture.cpp  edge_se2_pointxy_mixture.cpp  edge_se3_mixture.cpp  types_g2o_mixture.cpp
graph_slam_uk/src/slam_optimizer/switchable_constraints/: edge_se2MaxMixture.cpp  edge_se2Switchable.cpp  edge_se3Switchable.cpp  edge_switchPrior.cpp  types_g2o_robust.cpp  vertex_switchLinear.cpp
graph_slam_uk/test/: gauss_newton_optimalizer_test.cpp  pose_graph_test.cpp
graph_slam_uk/test/ndt/: voxel_grid2d_test.cpp
graph_slam_uk/test/registration/: ndt2d_test.cpp
graph_slam_uk/test/slam_optimizer/: gauss_newton_optimalizer_test.cpp  pose_graph_test.cpp
graph_slam_uk/test/utils/: eigen_tools_test.cpp
ndt_grid2d/: CMakeLists.txt  package.xml
ndt_grid2d/include/ndt_grid2d/: cell_policy2d.h  ndt_cell.h  ndt_grid2d.h  ndt_mapper.h  types.h  voxel_grid2d.h
ndt_gslam/: CMakeLists.txt  README.md  package.xml
ndt_gslam/config/: quadrocopter.rviz  xbox360.yaml
ndt_gslam/include/ndt_gslam/: graph_slam2d_node.h  inc_scanmatcher_node.h  ndt_grid2d_holder.h  ndt_slam_algorithm.h  pcl_holder.h  slam_algorithm_interface.h
ndt_gslam/include/ndt_gslam/ndt/: ndt_cell.h  ndt_grid2d.h  ndt_mapper.h  output_msgs.h  voxel_grid2d.h
ndt_gslam/include/ndt_gslam/registration/: correlative_estimation2d.h  correlative_estimation_tools.h  d2d_ndt2d.h  d2d_ndt2d_robust.h  ndt2d.h  ndt_reg_tools.h
ndt_gslam/include/ndt_gslam/slam_optimizer/: graph_slam_interfaces.h  loop_detector.h  ndt_scanmatcher.h  pose_graph.h  slam2d.h  slam2d_policy.h
ndt_gslam/include/ndt_gslam/slam_optimizer/max_mixture/: edge_se2_mixture.h  edge_se2_pointxy_mixture.h  types_g2o_mixture.h
ndt_gslam/include/ndt_gslam/slam_optimizer/switchable_constraints/: License  edge_se2Switchable.h  edge_switchPrior.h
ndt_gslam/include/ndt_gslam/utils/: covariance_inverse.h  covariance_wrapper.h  eigen_tools.h  msgs_conversions.h  point_cloud_tools.h  ros_scope_timer.h  string_tools.h  tf_conversions.h
ndt_gslam/launch/: cvut_graph_slam.launch  gmapping_MIT_bag.launch  gmapping_clf_bags.launch  graph_slam_bag_MIT.launch  hector-quadrocopter.launch  hector_MIT_bag.launch  inc_scanmatcher_MIT.launch  ndt_gslam_turtlebot.launch
ndt_gslam/params/: ukf_params.yaml
ndt_gslam/rviz/: MIT_dataset.rviz
ndt_gslam/src/: graph_slam2d_node.cpp  inc_scanmatcher_node.cpp
ndt_gslam/src/ndt/: ndt_cell.cpp  ndt_grid2d_merging.cpp
ndt_gslam/src/registration/: ndt2d_visual.cpp
ndt_gslam/src/slam_optimizer/max_mixture/: edge_se2_mixture.cpp  edge_se2_pointxy_mixture.cpp  edge_se3_mixture.cpp  types_g2o_mixture.cpp
ndt_gslam/src/slam_optimizer/switchable_constraints/: edge_se2MaxMixture.cpp  edge_se2Switchable.cpp  edge_se3Switchable.cpp  edge_switchPrior.cpp  types_g2o_robust.cpp  vertex_switchLinear.cpp
ndt_gslam/test/ndt/: voxel_grid2d_test.cpp
ndt_gslam/test/registration/: ndt2d_test.cpp
ndt_gslam/test/slam_optimizer/: gauss_newton_optimalizer_test.cpp  pose_graph_test.cpp
ndt_gslam/test/utils/: eigen_tools_test.cpp
ndt_gslam/worlds/: mff_2f.world
ndt_scanmatching2d/: CMakeLists.txt  package.xml
ndt_scanmatching2d/include/ndt_scanmatching2d/: correlative_estimation2d.h  correlative_estimation_tools.h  d2d_ndt2d.h  d2d_ndt2d_robust.h  ml_correlative_matcher2d.h  ndt2d.h  ndt_scanmatching2d_node.h  scanmatchable_grid_interface.h
ndt_scanmatching2d/launch/: ml_ndt.launch  ml_ndt_bag.launch
ndt_scanmatching2d/src/: ndt_scanmatching2d_node.cpp
ndt_scanmatching2d/test/: ndt2d_test.cpp  ndt2d_visual.cpp
ndt_scanmatching2d/test/data/: data.poses  data.scans
odometry_tf_publisher/: CMakeLists.txt  package.xml
odometry_tf_publisher/src/: odometry_publisher_node.cpp
