<?xml version="1.0"?>
<package format="2">
  <name>ndt_gslam</name>
  <version>0.0.0</version>
  <description>The ndt_gslam package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lukas.jelinek1@gmail.com">Lukas Jelinek</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ndt_gslam</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!--   <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rospy</exec_depend>

    <test_depend>python-mock</test_depend> -->
<!-- <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>python-mock</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <doc_depend>doxygen</doc_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>