<?xml version="1.0"?>
<package format="2">
  <name>ndt_scanmatching2d</name>
  <version>0.0.0</version>
  <description>The ndt_scanmatching2d package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lukas.jelinek1@gmail.com">Lukas Jelinek</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
<!--   <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>python-mock</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_slam_utils</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>dynamic_slam_utils</exec_depend>
  <doc_depend>doxygen</doc_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>